...
                    </textFieldCell>
                </textField>
                <textField identifier="Connection Name" focusRingType="none" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="UUR-Gw-led">
                    <rect key="frame" x="132" y="241" width="338" height="24"/>
                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="Unnamed Connection" drawsBackground="YES" id="KJG-u1-aYZ">
...
                <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="GMX-yE-1uu">
                    <rect key="frame" x="132" y="119" width="338" height="24"/>
                    <popUpButtonCell key="cell" type="push" title="PLAIN" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="Ppw-Wr-jyy" id="LMw-S9-XC8">
                        <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                        <font key="font" metaFont="message"/>
...
                            <items>
                                <menuItem title="PLAIN" state="on" id="Ppw-Wr-jyy"/>
                                <menuItem title="SCRAM-SHA-256" tag="1" id="y1E-w3-lsN">
                                    <modifierMask key="keyEquivalentModifierMask"/>
                                </menuItem>
                                <menuItem title="SCRAM-SHA-512" tag="2" id="uY2-jp-2pO">
                                    <modifierMask key="keyEquivalentModifierMask"/>
                                </menuItem>
                                <menuItem title="AWS-MSK-IAM" tag="3" id="1uC-I1-fZr"/>
                            </items>
                        </menu>
...
                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="8jD-8V-wdc">
                            <rect key="frame" x="0.0" y="0.0" width="66" height="24"/>
                            <buttonCell key="cell" type="push" title="Cancel" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="LHb-NS-viJ">
                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                <font key="font" metaFont="system"/>
...
                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="11T-ax-bcq">
                    <rect key="frame" x="133" y="53" width="91" height="16"/>
                    <buttonCell key="cell" type="check" title="Enable SSL" bezelStyle="regularSquare" imagePosition="left" inset="2" id="ApP-hh-OFP">
                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                        <font key="font" metaFont="system"/>
...
                        <constraint firstAttribute="width" constant="127" id="LHN-3J-LJl"/>
                    </constraints>
                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="root" drawsBackground="YES" id="pcB-RM-uoc">
                        <font key="font" metaFont="system"/>
                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
...
                        <constraint firstAttribute="width" constant="85" id="NHt-FF-Hbp"/>
                    </constraints>
                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="us-east-1" drawsBackground="YES" id="rmO-UQ-XCS">
                        <font key="font" metaFont="system"/>
                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
...
                <textField focusRingType="none" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="oA1-Dd-IfN">
                    <rect key="frame" x="306" y="63" width="164" height="24"/>
                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="AKEYEXAMPLE" drawsBackground="YES" id="Pfm-n5-41K">
                        <font key="font" metaFont="system"/>
                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
...
