...
                            <menuItem title="Paste and Match Style" keyEquivalent="V" id="WeT-3V-zwk">
                                <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
                                <connections>
                                    <action selector="pasteAsPlainText:" target="-1" id="cEh-KX-wJQ"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Delete" id="pa3-QI-u2k">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections>
                                    <action selector="delete:" target="-1" id="0Mk-Ml-PaM"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Select All" keyEquivalent="a" id="Ruw-6m-B2m">
...
                    </menu>
                </menuItem>
                <menuItem title="Connection" identifier="ConnectionMenuItem" id="jxT-CU-nIS">
                    <modifierMask key="keyEquivalentModifierMask"/>
                    <menu key="submenu" title="Connection" id="GEO-Iw-cKr">
                        <items>
                            <menuItem title="New Connection..." keyEquivalent="N" identifier="NewConnectionMenuItem" id="Gi5-1S-RQB">
                                <connections>
                                    <action selector="newConnection:" target="-1" id="uof-pi-x0L"/>
                                </connections>
                            </menuItem>
                            <menuItem isSeparatorItem="YES" id="WHu-8t-f5x"/>
                            <menuItem title="Reload" keyEquivalent="r" identifier="ReloadMetadataMenuItem" id="2Ay-NU-oLr">
...
                                    <action selector="toggleFullScreen:" target="-1" id="dU3-MA-1Rq"/>
                                </connections>
                            </menuItem>
                        </items>
                    </menu>
                </menuItem>
                <menuItem title="Window" id="aUF-d1-5bR">
                    <modifierMask key="keyEquivalentModifierMask"/>
                    <menu key="submenu" title="Window" systemMenu="window" id="Td7-aD-5lo">
                        <items>
                            <menuItem title="Minimize" keyEquivalent="m" id="OY7-WF-poV">
                                <connections>
                                    <action selector="performMiniaturize:" target="-1" id="VwT-WD-YPe"/>
...
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections>
                                    <action selector="performZoom:" target="-1" id="DIl-cC-cCs"/>
                                </connections>
                            </menuItem>
                            <menuItem isSeparatorItem="YES" id="hGi-y0-1eX"/>
                            <menuItem title="Welcome to Franz" keyEquivalent="1" id="LVG-41-qjf">
                                <modifierMask key="keyEquivalentModifierMask" shift="YES" command="YES"/>
                                <connections>
                                    <action selector="didPushWelcomeToFranzButton:" target="Voe-Tx-rLC" id="rq6-QK-t1N"/>
                                </connections>
                            </menuItem>
                            <menuItem isSeparatorItem="YES" id="eu3-7i-yIM"/>
...
