...
    case .success(let password):
      return .success(password)
    case .error(let status):
      return .error(status)
    case .notFound, .badData:
      let passwordField = NSSecureTextField(frame: NSRect(x: 0, y: 0, width: 250, height: 22))
      let alert = NSAlert()
      alert.messageText = "Password Required"
      alert.informativeText = "A password is required to access this \(what)."
      alert.accessoryView = passwordField
      alert.window.initialFirstResponder = passwordField
      alert.addButton(withTitle: "OK")
      alert.addButton(withTitle: "Cancel")
      switch alert.runModal() {
      case .alertFirstButtonReturn:
        let password = passwordField.stringValue
        upsert(password: password, withId: id)
        return .success(password)
...
